Update student loan ccard

--- a/locales/en.json
+++ b/locales/en.json
@@ -114,7 +114,7 @@
   "rrif.preamble": "<ul class='list-disc list-outside'><li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money. </li></ul>",
   "rrif.linktext": "Contact your bank for more details",
   "student_loan.header": "No student loan payments for 6 months",
-  "student_loan.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>You don’t need to apply to pause your payments.</li><li> Pre-authorized payments are stopped.</li><li> Log in to your <a href='#'>National Student Loans Service account</a> to see how much  </li></ul>",
+  "student_loan.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>You don’t need to apply to pause your payments.</li><li> Pre-authorized payments are stopped.</li><li> Log in to your <a href='#'>National Student Loans Service</a> account to see how much you will save</li></ul>",
   "student_loan.linktext": "Learn more about help with student loan payments",
   "student_loan.box1": "Payments automatically paused",
   "student_loan.box2": "From March 30, 2020 until September 30, 2020",
