--- a/locales/en.json
+++ b/locales/en.json
@@ -16,9 +16,8 @@
   "footer.link2": "https://digital.canada.ca/legal/terms/",
   "footer.link2.desc": "Terms and conditions",
   "phase.desc": "This site will change as we test ideas.",
-  "start.intro.1": "Answer some questions to find out about financial help.",
-  "start.intro.2": "This tool does not collect or track your information. See our <a href='https://digital.canada.ca/legal/privacy/'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/'>Terms and conditions</a> for more information. It only suggests federal programs at this time.",
-  "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
+  "start.intro.2": "Your answers do not impact your eligibility. See our <a href='https://digital.canada.ca/legal/privacy/'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/'>Terms and conditions</a> for more information. It only suggests federal programs at this time.",
+  "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href=\"\">an emergency loan</a>.",
   "start.intro.banner.2": "Details are available online.",
   "start.submit": "Start now",
   "start.title": "Money for COVID‑19",
@@ -29,16 +28,16 @@
   "feedback": "Feedback",
   "start_over": "Start over",
   "lost_job.1": "Yes, all your income",
-  "lost_job.2": "Some of your income",
+  "lost_job.2": "Yes, some of your income",
   "lost_job.3": "No, your income is the same",
   "form.lost_job": "Have you lost income due to COVID‑19?",
   "form.your_situation.no_income": "Choose the description that best fits your situation",
   "your_situation.no_income.1": "You lost your job or your employer closed",
-  "your_situation.no_income.2": "You’re self-employed and had to close",
+  "your_situation.no_income.2": "You’re self-employed and have no income",
   "your_situation.no_income.3": "You’re on unpaid leave to care for a child or sick person",
   "your_situation.no_income.4": "You’re sick or quarantined on unpaid leave",
   "your_situation.no_income.5": "You were on parental leave recently, but you cannot return to work",
-  "your_situation.no_income.6": "You were on Employment Insurance benefits in the last 12 months and your claim has ended",
+  "your_situation.no_income.6": "You were supposed to start a new job but couldn’t due to COVID-19",
   "your_situation.some_income.1": "Your hours have been reduced due to COVID‑19",
   "your_situation.some_income.2": "You’re retired",
   "your_situation.some_income.3": "You’ve lost one of your jobs but you still have a side gig",
@@ -64,7 +63,7 @@
   "gst.hint": "Check your bank account to find out if you’ve been receiving the GST credit. <a href='#'>Dates of payments are available</a>. ",
   "student_debt.1": "Yes",
   "student_debt.2": "No",
-  "form.student_debt": "Do you have student debt?",
+  "form.student_debt": "Do you have student debt you owe the government?",
   "Next": "Next",
   "rrif.1": "Yes",
   "rrif.2": "No",
@@ -76,10 +75,10 @@
   "form.gross_income": "How much income (before taxes) did you earn in the last 12 months?",
   "days_stopped_working.1": "Fewer than 14 days in a row with no work",
   "days_stopped_working.2": "More than 14 days in a row with no work",
-  "form.days_stopped_working": "How many days in a row did you go without work?",
-  "cerb.header": "Apply for the Canada Emergency Response Benefit",
+  "form.days_stopped_working": "How many days in a row did you go without work due to COVID-19?",
+  "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "cerb.preamble": "<p>The benefit can help if you:</p><ul class='list-outside list-disc'><li>Stopped working for at least 14 consecutive days because of COVID-19.</li> <li>Earned at least $5,000 in the last 12 months.</li></ul><p>Good to know:</p><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to pay income tax on these payments in the future. </li><li> The best day of the week for you to apply depends on your birth month.</li> </ul>",
-  "cerb.linktext": "Learn more about the Canada Emergency Response Benefit",
+  "cerb.linktext": "Apply for Canada Emergency Response Benefit",
   "cerb.box1": "$500 per week, paid every 4 weeks",
   "cerb.box2": "Up to 4 months",
   "cerb.box3": "Within 10 days of applying",
@@ -90,7 +89,7 @@
   "gst_credit.header": "More money through the GST credit",
   "gst_credit.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the GST credit.</li><li> Dates of payments are available online.</li></ul>",
   "gst_credit.linktext": "Learn more about GST credit",
-  "gst_credit.box1": "One-time automatic payment in May",
+  "gst_credit.box1": "One-time automatic payment in April",
   "gst_credit.box2": "$400 for single people, $600 for couples",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "ccb_payment.preamble": "<p>The benefit can help if you:</p><ul class='list-disc list-outside'><li>Care for a child under 18 years old</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li><li> Dates of payments are available online.</li></ul>",
@@ -114,7 +113,7 @@
   "rrif.preamble": "<ul class='list-disc list-outside'><li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money. </li></ul>",
   "rrif.linktext": "Contact your bank for more details",
   "student_loan.header": "No student loan payments for 6 months",
-  "student_loan.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>You don’t need to apply to pause your payments.</li><li> Pre-authorized payments are stopped.</li><li> Log in to your <a href='#'>National Student Loans Service</a> account to see how much you will save</li></ul>",
+  "student_loan.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>You don’t need to apply to pause your payments.</li><li> Pre-authorized payments are stopped.</li><li> Log in to your <a href='#'>National Student Loans Service</a> account to see how much you will save.</li></ul>",
   "student_loan.linktext": "Learn more about help with student loan payments",
   "student_loan.box1": "Payments automatically paused",
   "student_loan.box2": "From March 30, 2020 until September 30, 2020",
