--- a/locales/en.json
+++ b/locales/en.json
@@ -129,5 +129,6 @@
   "ei_regular_and_cerb.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li></ul><p>If you’re eligible for both Employment Insurance (EI) and Canada Emergency Response Benefit (CERB), you will receive CERB for the first 4 months. Then you’ll automatically start receiving EI Regular Benefits after, if you’re still not working.</p>",
   "ei_regular_and_cerb.linktext": "To apply, go to Service Canada’s website.",
   "ei_regular_and_cerb.box1": "$500 per week, paid every 4 weeks",
-  "results.header_text": "Based on what you’ve told us, the following help is available:"
+  "results.header_text": "Based on what you’ve told us, the following help is available:",
+  "button.back": "Back"
 }
