--- a/locales/en.json
+++ b/locales/en.json
@@ -130,5 +130,6 @@
   "ei_regular_and_cerb.linktext": "To apply, go to Service Canada’s website.",
   "ei_regular_and_cerb.box1": "$500 per week, paid every 4 weeks",
   "results.header_text": "Based on what you’ve told us, the following help is available:",
-  "button.back": "Back"
+  "button.back": "Back",
+  "Cancel": "Cancel"
 }
