--- a/locales/en.json
+++ b/locales/en.json
@@ -17,8 +17,8 @@
   "button.back": "Back",
   "ccb.1": "Yes",
   "ccb.2": "No",
-  "ccb.3": "You're not sure",
-  "ccb.hint": "Check your bank account to find out if you’ve been receiving the Canada Child Benefit. <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.htmlk'>Dates of payments</a> are available. ",
+  "ccb.3": "You’re not sure.",
+  "ccb.hint": "Check your bank account to find out if you’ve been receiving the Canada Child Benefit. <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.htmlk'>Dates of payments are available.</a> ",
   "ccb_payment.box1": "One-time automatic payment in May",
   "ccb_payment.box2": "$300 per child",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
@@ -66,7 +66,7 @@
   "form.lost_job": "Have you lost income due to COVID‑19?",
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
   "form.rrif": "Do you have a Registered Retirement Income Fund (RRIF)?",
-  "form.student_debt": "Do you have student debt?",
+  "form.student_debt": "Do you have student loans you owe the government?",
   "form.your_situation.no_income": "Choose the description that best fits your situation",
   "form.your_situation.some_income": "Choose the description that best fits your situation",
   "form.your_situation.unchanged_income": "Choose the description that best fits your situation",
@@ -89,9 +89,9 @@
   "mortgage_deferral.header": "Contact your bank to delay mortgage payments",
   "mortgage_deferral.linktext": "Learn more about help with your mortgage",
   "mortgage_deferral.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>The bank will still charge interest</li><li> When you’re able to pay again, you’ll have to pay the interest that was collected during the deferral, as well as your regular payments.</li><li> You can also talk to your bank about special payment arrangements or re-amortizing your mortgage. </li></ul>",
-  "mortgage_payments.1": "Yes, you’re worried about your mortgage",
-  "mortgage_payments.2": "Yes, you’re worried about your rent",
-  "mortgage_payments.3": "No, you’re not worried at this time",
+  "mortgage_payments.1": "Yes, you’re worried about your mortgage.",
+  "mortgage_payments.2": "Yes, you’re worried about your rent.",
+  "mortgage_payments.3": "No, you’re not worried at this time.",
   "phase.desc": "This site will change as we test ideas.",
   "rent_help.header": "You cannot be evicted for not paying rent",
   "rent_help.linktext": "Check with your provincial government for more details",
@@ -132,5 +132,7 @@
   "your_situation.unchanged_income.1": "You’re working from home",
   "your_situation.unchanged_income.2": "You’re on paid leave",
   "your_situation.unchanged_income.3": "You’re retired",
-  "mortgage_payments.title": "Your housing"
+  "mortgage_payments.title": "Your housing",
+  "ccb.title": "Canada Child Benefit",
+  "student_debt.title": "Student loans"
 }
