update english cerb card content

--- a/locales/en.json
+++ b/locales/en.json
@@ -26,10 +26,10 @@
   "ccb_payment.preamble": "<p>The benefit can help if you:</p><ul class='list-disc list-outside'><li>Care for a child under 18 years old</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li><li> Dates of payments are available online.</li></ul>",
   "cerb.box1": "$500 per week, paid every 4 weeks",
   "cerb.box2": "Up to 4 months",
-  "cerb.box3": "Within 10 days of applying",
+  "cerb.box3": "First payment within 10 days of applying",
   "cerb.header": "Apply for the Canada Emergency Response Benefit",
-  "cerb.linktext": "Learn more about the Canada Emergency Response Benefit",
-  "cerb.preamble": "<p>The benefit can help if you:</p><ul class='list-outside list-disc'><li>Stopped working for at least 14 consecutive days because of COVID-19.</li> <li>Earned at least $5,000 in the last 12 months.</li></ul><p>Good to know:</p><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to pay income tax on these payments in the future. </li><li> The best day of the week for you to apply depends on your birth month.</li> </ul>",
+  "cerb.linktext": "Apply for CERB",
+  "cerb.preamble": "<p>The benefit can help if you:</p><ul class='list-outside list-disc'><li>Stopped working for at least 14 consecutive days because of COVID-19.</li> <li>Earned at least $5,000 in the last 12 months.</li></ul><p>Good to know:</p><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to re-apply for each 4-week period you’re not working.</li><li>You’ll need to pay income tax on these payments in the future.</li> </ul>",
   "days_stopped_working.1": "Fewer than 14 days in a row with no work",
   "days_stopped_working.2": "More than 14 days in a row with no work",
   "ei_regular.box1": "$500 per week, paid every 2 weeks",
