the rest of the tranlations

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -24,9 +24,9 @@
   "ccb_payment.header": false,
   "ccb_payment.linktext": false,
   "ccb_payment.preamble": false,
-  "cerb.box1": false,
-  "cerb.box2": false,
-  "cerb.box3": false,
+  "cerb.box1": "500 $ par semaine, versement aux 4 semaines",
+  "cerb.box2": "Pendant 4 mois maximum",
+  "cerb.box3": "À recevoir au plus tard 10 jours après la demande",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "cerb.linktext": "Demander la PCU",
   "cerb.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li> <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
