--- a/locales/en.json
+++ b/locales/en.json
@@ -37,9 +37,9 @@
   "ei_regular.linktext": "Learn more about Employment Insurance (EI) Regular Benefits",
   "ei_regular.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li></ul>",
   "ei_regular_and_cerb.box1": "$500 per week, paid every 4 weeks",
-  "ei_regular_and_cerb.linktext": "To apply, go to Service Canada’s website.",
-  "ei_regular_and_cerb.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li></ul><p>If you’re eligible for both Employment Insurance (EI) and Canada Emergency Response Benefit (CERB), you will receive CERB for the first 4 months. Then you’ll automatically start receiving EI Regular Benefits after, if you’re still not working.</p>",
-  "ei_regular_cerb.header": "Apply for Employment Insurance (EI) Regular Benefits",
+  "ei_regular_and_cerb.linktext": "Apply for EI Regular Benefits and CERB",
+  "ei_regular_and_cerb.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li><li>You’ll need to re-apply for CERB for each 4-week period you’re not working</li></ul><p>If you’re eligible for both Employment Insurance (EI) and the Canada Emergency Response Benefit (CERB), you will receive CERB for the first 4 months. Then you’ll automatically start receiving EI Regular Benefits after, if you’re still not working.</p>",
+  "ei_regular_cerb.header": "Apply for both CERB and EI Regular Benefits",
   "ei_sickness.box1": "$500 per week, paid every 2 weeks",
   "ei_sickness.header": "Apply for Employment Insurance (EI) Sickness Benefits",
   "ei_sickness.linktext": "Learn more about Employment Insurance (EI) Sickness Benefits",
