--- a/locales/fr.json
+++ b/locales/fr.json
@@ -36,10 +36,10 @@
   "ei_regular.header": false,
   "ei_regular.linktext": false,
   "ei_regular.preamble": false,
-  "ei_regular_and_cerb.box1": false,
-  "ei_regular_and_cerb.linktext": false,
-  "ei_regular_and_cerb.preamble": false,
-  "ei_regular_cerb.header": false,
+  "ei_regular_and_cerb.box1": "500 $ par semaine, versement aux 4 semaines",
+  "ei_regular_and_cerb.linktext": "Demander les prestations regulières de l’assurance-emploi et la PCU",
+  "ei_regular_and_cerb.preamble": "<p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID-19.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines</li></ul><p>Si vous êtes admissible à l’assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois. Vous recevrez ensuite les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
+  "ei_regular_cerb.header": "Présenter une demande pour la PCU, ainsi que les prestations régulières de l’assurance-emploi (AE)",
   "ei_sickness.box1": false,
   "ei_sickness.header": false,
   "ei_sickness.linktext": false,
