Adding french text

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -15,9 +15,10 @@
   "app.phase": "ALPHA",
   "app.title": "Money for COVID‑19",
   "button.back": false,
-  "ccb.1": false,
-  "ccb.2": false,
-  "ccb.hint": false,
+  "ccb.1": "Oui",
+  "ccb.2": "Non",
+  "ccb.3": "Je ne sais pas.",
+  "ccb.hint": "Consultez vos relevés bancaires afin de déterminer si vous recevez l’Allocation canadienne pour enfants. <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html'>Consultez les dates de versement des prestations.</a>",
   "ccb_payment.box1": false,
   "ccb_payment.box2": false,
   "ccb_payment.header": false,
@@ -63,9 +64,9 @@
   "form.gross_income": "Quel est la somme totale de vos revenus de travail (avant taxes) des 12 derniers mois?",
   "form.gst": false,
   "form.lost_job": false,
-  "form.mortgage_payments": false,
+  "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
   "form.rrif": "form.rrif",
-  "form.student_debt": false,
+  "form.student_debt": "Devez vous payer une dette d’étude au gouvernement?",
   "form.your_situation.no_income": false,
   "form.your_situation.some_income": false,
   "form.your_situation.unchanged_income": false,
@@ -87,9 +88,9 @@
   "mortgage_deferral.header": false,
   "mortgage_deferral.linktext": false,
   "mortgage_deferral.preamble": false,
-  "mortgage_payments.1": false,
-  "mortgage_payments.2": false,
-  "mortgage_payments.3": false,
+  "mortgage_payments.1": "Oui, vous êtes inquiet au sujet de votre hypothèque.",
+  "mortgage_payments.2": "Oui, vous êtes inquiet au sujet de votre loyer.",
+  "mortgage_payments.3": "Non, vous n’êtes pas inquiet en ce moment.",
   "phase.desc": "This site will change as we test ideas.",
   "rent_help.header": false,
   "rent_help.linktext": false,
@@ -110,8 +111,8 @@
   "start.subtitle": "Find out what financial help is available",
   "start.title": "Money for COVID‑19",
   "start_over": "Start over",
-  "student_debt.1": false,
-  "student_debt.2": false,
+  "student_debt.1": "Oui",
+  "student_debt.2": "Non",
   "student_loan.box1": false,
   "student_loan.box2": false,
   "student_loan.header": false,
@@ -130,7 +131,7 @@
   "your_situation.unchanged_income.1": false,
   "your_situation.unchanged_income.2": false,
   "your_situation.unchanged_income.3": false,
-  "mortgage_payments.title": "mortgage_payments.title",
-  "ccb.title": "ccb.title",
-  "student_debt.title": "student_debt.title"
+  "mortgage_payments.title": "Votre logement",
+  "ccb.title": "Allocation canadienne pour enfants",
+  "student_debt.title": "Dette d’études"
 }
