--- a/locales/en.json
+++ b/locales/en.json
@@ -32,10 +32,10 @@
   "cerb.preamble": "<p>The benefit can help if you:</p><ul class='list-outside list-disc'><li>Stopped working for at least 14 consecutive days because of COVID-19.</li> <li>Earned at least $5,000 in the last 12 months.</li></ul><p>Good to know:</p><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to re-apply for each 4-week period you’re not working.</li><li>You’ll need to pay income tax on these payments in the future.</li> </ul>",
   "days_stopped_working.1": "Fewer than 14 days in a row with no work",
   "days_stopped_working.2": "More than 14 days in a row with no work",
-  "ei_regular.box1": "$500 per week, paid every 2 weeks",
+  "ei_regular.box1": "55% of your income, paid every 2 weeks",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
-  "ei_regular.linktext": "Learn more about Employment Insurance (EI) Regular Benefits",
-  "ei_regular.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li></ul>",
+  "ei_regular.linktext": "Apply for EI Regular Benefits",
+  "ei_regular.preamble": "<p>EI can help if you:</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><p>Good to know:</p><ul><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li><li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li></ul>",
   "ei_regular_and_cerb.box1": "$500 per week, paid every 4 weeks",
   "ei_regular_and_cerb.linktext": "Apply for EI Regular Benefits and CERB",
   "ei_regular_and_cerb.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li><li>You’ll need to re-apply for CERB for each 4-week period you’re not working</li></ul><p>If you’re eligible for both Employment Insurance (EI) and the Canada Emergency Response Benefit (CERB), you will receive CERB for the first 4 months. Then you’ll automatically start receiving EI Regular Benefits after, if you’re still not working.</p>",
