--- a/locales/fr.json
+++ b/locales/fr.json
@@ -32,10 +32,10 @@
   "cerb.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li> <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
   "days_stopped_working.1": false,
   "days_stopped_working.2": false,
-  "ei_regular.box1": false,
-  "ei_regular.header": false,
-  "ei_regular.linktext": false,
-  "ei_regular.preamble": false,
+  "ei_regular.box1": "55 % de votre revenu, versement aux 2 semaines",
+  "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
+  "ei_regular.linktext": "Apply for EI Regular Benefits",
+  "ei_regular.preamble": "<p>L’assurance-emploi peut vous aider si</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><p>Bon à savoir :</p><ul><li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID-19.</li><li>Le nombre de semaines admissible dépend du nombre “d’heures assurables” travaillées lors des 52 semaines précédentes.</li></ul>",
   "ei_regular_and_cerb.box1": "500 $ par semaine, versement aux 4 semaines",
   "ei_regular_and_cerb.linktext": "Demander les prestations regulières de l’assurance-emploi et la PCU",
   "ei_regular_and_cerb.preamble": "<p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID-19.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines</li></ul><p>Si vous êtes admissible à l’assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois. Vous recevrez ensuite les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
