--- a/locales/fr.json
+++ b/locales/fr.json
@@ -34,7 +34,7 @@
   "days_stopped_working.2": false,
   "ei_regular.box1": "55 % de votre revenu, versement aux 2 semaines",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
-  "ei_regular.linktext": "Apply for EI Regular Benefits",
+  "ei_regular.linktext": "Demander les prestations regulières de l’assurance-emploi",
   "ei_regular.preamble": "<p>L’assurance-emploi peut vous aider si</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><p>Bon à savoir :</p><ul><li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID-19.</li><li>Le nombre de semaines admissible dépend du nombre “d’heures assurables” travaillées lors des 52 semaines précédentes.</li></ul>",
   "ei_regular_and_cerb.box1": "500 $ par semaine, versement aux 4 semaines",
   "ei_regular_and_cerb.linktext": "Demander les prestations regulières de l’assurance-emploi et la PCU",
