update ei sickness + cerb content and translation

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -44,10 +44,11 @@
   "ei_sickness.header": false,
   "ei_sickness.linktext": false,
   "ei_sickness.preamble": false,
-  "ei_sickness_and_cerb.box1": false,
-  "ei_sickness_and_cerb.linktext": false,
-  "ei_sickness_and_cerb.preamble": false,
-  "ei_sickness_cerb.header": false,
+  "ei_sickness_cerb.box1": "500 $ par semaine, versement aux 4 semaines",
+  "ei_sickness_cerb.box2": "Pendant 4 mois maximum",
+  "ei_sickness_cerb.linktext": "Demander les prestations de maladie de l'assurance-emploi et la PCU",
+  "ei_sickness_cerb.preamble": "<p>La PCU peut vous aider si :</p><ul><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li><li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Si vous êtes admissible aux prestations de maladie de l'assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois de votre arrêt de travail. Vous recevrez ensuite automatiquement les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
+  "ei_sickness_cerb.header": "Présenter une demande pour la PCU, ainsi que les prestations de maladie de l'assurance-emploi ",
   "ei_workshare.box1": false,
   "ei_workshare.box2": false,
   "ei_workshare.header": false,
