--- a/locales/en.json
+++ b/locales/en.json
@@ -44,10 +44,11 @@
   "ei_sickness.header": "Apply for Employment Insurance (EI) Sickness Benefits",
   "ei_sickness.linktext": "Learn more about Employment Insurance (EI) Sickness Benefits",
   "ei_sickness.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Due to the COVID-19 crisis, we’ve waived the one-week waiting period so you can get paid faster. </li><li> We also waived the requirement for medical certification to make it easier to apply. </li></ul>",
-  "ei_sickness_and_cerb.box1": "$500 per week, paid every 4 weeks",
-  "ei_sickness_and_cerb.linktext": "To apply, go to Service Canada’s website.",
-  "ei_sickness_and_cerb.preamble": "<p>Based on what you’ve told us, Employment Insurance (EI) Sickness Benefits may be able to help you. The Canada Emergency Response Benefit (CERB) may also help you.</p><p>If you’re eligible for both EI and CERB, you will receive CERB for the first 4 months. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
-  "ei_sickness_cerb.header": "Apply for Employment Insurance (EI) Sickness Benefits",
+  "ei_sickness_cerb.box1": "$500 per week, paid every 4 weeks",
+  "ei_sickness_cerb.box2": "Up to 4 months",
+  "ei_sickness_cerb.linktext": "Apply for EI Sickness Benefits and CERB",
+  "ei_sickness_cerb.preamble": "<p>CERB can help if you:</p><ul><li>Stopped working for at least 14 consecutive days because of COVID-19.</li><li>Earned at least $5,000 in the last 12 months.</li></ul><p>If you’re eligible for both EI  Sickness Benefits and CERB, you will receive CERB for the first 4 months you’re off work. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
+  "ei_sickness_cerb.header": "Apply for both CERB and Employment Insurance (EI) Sickness Benefits",
   "ei_workshare.box1": "Receive EI benefits",
   "ei_workshare.box2": "Up to 76 weeks",
   "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
