update ei workshare content and add fr placeholders

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -45,11 +45,11 @@
   "ei_sickness_cerb.linktext": "Demander les prestations de maladie de l'assurance-emploi et la PCU",
   "ei_sickness_cerb.preamble": "<p>La PCU peut vous aider si :</p><ul><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li><li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Si vous êtes admissible aux prestations de maladie de l'assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois de votre arrêt de travail. Vous recevrez ensuite automatiquement les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
   "ei_sickness_cerb.header": "Présenter une demande pour la PCU, ainsi que les prestations de maladie de l'assurance-emploi ",
-  "ei_workshare.box1": false,
-  "ei_workshare.box2": false,
-  "ei_workshare.header": false,
-  "ei_workshare.linktext": false,
-  "ei_workshare.preamble": false,
+  "ei_workshare.box1": "Receive EI benefits",
+  "ei_workshare.box2": "Up to 76 weeks",
+  "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
+  "ei_workshare.linktext": "Learn more about EI Work-Sharing",
+  "ei_workshare.preamble": "<p></p><ul class='list-disc list-outside'><li>Your hours have been reduced by 10 to 60% because of COVID-19</li></ul><p>To do this:</p><ul class='list-disc list-outside'><li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li><li> All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li></ul>",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "feedback": "Feedback",
   "footer.link1": "https://numerique.canada.ca/transparence/confidentialite/",
