--- a/locales/en.json
+++ b/locales/en.json
@@ -48,8 +48,8 @@
   "ei_workshare.box1": "Receive EI benefits",
   "ei_workshare.box2": "Up to 76 weeks",
   "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
-  "ei_workshare.linktext": "Learn more about Employment Insurance (EI) Work-Sharing",
-  "ei_workshare.preamble": "<p></p><ul class='list-disc list-outside'><li>Your hours have been reduced by 10 to 60% because of COVID-19</li></ul><p>To do this:</p><ul class='list-disc list-outside'><li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li><li> All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li></ul",
+  "ei_workshare.linktext": "Learn more about EI Work-Sharing",
+  "ei_workshare.preamble": "<p></p><ul class='list-disc list-outside'><li>Your hours have been reduced by 10 to 60% because of COVID-19</li></ul><p>To do this:</p><ul class='list-disc list-outside'><li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li><li> All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li></ul>",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "feedback": "Feedback",
   "footer.link1": "https://digital.canada.ca/legal/privacy/",
