update gst card content

--- a/locales/en.json
+++ b/locales/en.json
@@ -23,7 +23,7 @@
   "ccb_payment.box2": "$300 per child",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "ccb_payment.linktext": "Learn more about the Canada Child Benefit",
-  "ccb_payment.preamble": "<p>The benefit can help if you:</p><ul class='list-disc list-outside'><li>Care for a child under 18 years old</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li><li> Dates of payments are available online.</li></ul>",
+  "ccb_payment.preamble": "<p>The benefit can help if you:</p><ul class='list-disc list-outside'><li>Care for a child under 18 years old</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li><li><a href=\"\">Dates of payments are available</a> online.</li></ul>",
   "cerb.box1": "$500 per week, paid every 4 weeks",
   "cerb.box2": "Up to 4 months",
   "cerb.box3": "Within 10 days of applying",
@@ -76,11 +76,11 @@
   "gst.2": "No",
   "gst.3": "You're not sure",
   "gst.hint": "Check your bank account to find out if you’ve been receiving the GST credit. <a href='#'>Dates of payments are available</a>. ",
-  "gst_credit.box1": "One-time automatic payment in May",
+  "gst_credit.box1": "Automatic payment in April if you already receive the GST credit",
   "gst_credit.box2": "$400 for single people, $600 for couples",
   "gst_credit.header": "More money through the GST credit",
-  "gst_credit.linktext": "Learn more about GST credit",
-  "gst_credit.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the GST credit.</li><li> Dates of payments are available online.</li></ul>",
+  "gst_credit.linktext": "Learn more about the GST credit",
+  "gst_credit.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the GST credit.</li><li><a href=\"\">Dates of payments are available</a> online.</li></ul>",
   "lost_job.1": "Yes, all your income",
   "lost_job.2": "Some of your income",
   "lost_job.3": "No, your income is the same",
