--- a/locales/fr.json
+++ b/locales/fr.json
@@ -76,11 +76,11 @@
   "gst.2": false,
   "gst.3": false,
   "gst.hint": false,
-  "gst_credit.box1": false,
-  "gst_credit.box2": false,
-  "gst_credit.header": false,
-  "gst_credit.linktext": false,
-  "gst_credit.preamble": false,
+  "gst_credit.box1": "Automatic payment in April if you already receive the GST credit",
+  "gst_credit.box2": "$400 for single people, $600 for couples",
+  "gst_credit.header": "More money through the GST credit",
+  "gst_credit.linktext": "Learn more about the GST credit",
+  "gst_credit.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the GST credit.</li><li><a href=\"\">Dates of payments are available</a> online.</li></ul>",
   "lost_job.1": false,
   "lost_job.2": false,
   "lost_job.3": false,
