add ei workshare translations

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -45,11 +45,11 @@
   "ei_sickness_cerb.linktext": "Demander les prestations de maladie de l'assurance-emploi et la PCU",
   "ei_sickness_cerb.preamble": "<p>La PCU peut vous aider si :</p><ul><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li><li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Si vous êtes admissible aux prestations de maladie de l'assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois de votre arrêt de travail. Vous recevrez ensuite automatiquement les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
   "ei_sickness_cerb.header": "Présenter une demande pour la PCU, ainsi que les prestations de maladie de l'assurance-emploi ",
-  "ei_workshare.box1": "Receive EI benefits",
-  "ei_workshare.box2": "Up to 76 weeks",
-  "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
-  "ei_workshare.linktext": "Learn more about EI Work-Sharing",
-  "ei_workshare.preamble": "<p></p><ul class='list-disc list-outside'><li>Your hours have been reduced by 10 to 60% because of COVID-19</li></ul><p>To do this:</p><ul class='list-disc list-outside'><li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li><li> All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li></ul>",
+  "ei_workshare.box1": "Recevoir des prestations d’assurance-emploi",
+  "ei_workshare.box2": "Pendant 76 semaines maximum",
+  "ei_workshare.header": "Parlez à votre employeur et à vos collègues du programme Travail partagé de l’assurance-emploi",
+  "ei_workshare.linktext": "En savoir plus à propos du programme Travail partagé de l’assurance-emploi",
+  "ei_workshare.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-disc list-outside'><li>vos heures de travail ont été réduites de 10 à 60 % en raison de la COVID-19.</li></ul><p>Pour ce faire :</p><ul class='list-disc list-outside'><li>Vous devrez conclure une entente avec votre employeur et les autres employés effectuant les mêmes tâches que vous.</li><li>Tous les employés qui effectuent les mêmes tâches que vous doivent accepter de partager la charge de travail équitablement, et votre employeur doit aussi accepter.</li></ul>",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "feedback": "Feedback",
   "footer.link1": "https://numerique.canada.ca/transparence/confidentialite/",
