--- a/locales/fr.json
+++ b/locales/fr.json
@@ -7,14 +7,14 @@
   "Internal server error": "Internal server error",
   "Language Selection": "Language Selection",
   "Language selection: French": "Language selection: French",
-  "Next": "Next",
+  "Next": "Continuer",
   "Not found": "Not found",
   "Page not found": "Page not found",
   "Please correct the errors on the page": "Please correct the errors on the page",
   "Skip to main content": "Skip to main content",
   "app.phase": "ALPHA",
   "app.title": "Money for COVID‑19",
-  "button.back": false,
+  "button.back": "Retour",
   "ccb.1": false,
   "ccb.2": false,
   "ccb.3": false,
@@ -63,7 +63,7 @@
   "form.days_stopped_working": false,
   "form.gross_income": "Quel est la somme totale de vos revenus de travail (avant taxes) des 12 derniers mois?",
   "form.gst": false,
-  "form.lost_job": false,
+  "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": false,
   "form.rrif": "form.rrif",
   "form.student_debt": false,
@@ -81,9 +81,9 @@
   "gst_credit.header": false,
   "gst_credit.linktext": false,
   "gst_credit.preamble": false,
-  "lost_job.1": false,
-  "lost_job.2": false,
-  "lost_job.3": false,
+  "lost_job.1": "Vous avez perdu votre revenu en entier.",
+  "lost_job.2": "Vous avez perdu une partie de votre revenu.",
+  "lost_job.3": "Votre revenu n’est pas affecté par la COVID-19.",
   "mortgage_deferral.box1": false,
   "mortgage_deferral.header": false,
   "mortgage_deferral.linktext": false,
@@ -95,7 +95,7 @@
   "rent_help.header": false,
   "rent_help.linktext": false,
   "rent_help.preamble": false,
-  "required": "required",
+  "required": "obligatoire",
   "results.header_text": false,
   "results.title": false,
   "rrif.1": "rrif.1",
@@ -105,10 +105,10 @@
   "rrif.preamble": false,
   "start.intro.1": "Answer some questions to find out about financial help.",
   "start.intro.2": "Vos réponses n’influenceront pas votre admissibilité. Consultez notre <a href='https://numerique.canada.ca/transparence/confidentialite/'>Politique de confidentialité</a> et <a href='https://numerique.canada.ca/transparence/avis/'>l’Avis</a> pour en savoir plus.",
-  "start.submit": "Start now",
+  "start.submit": "Commencer",
   "start.subtitle": "Trouvez quelle aide financière vous est offerte",
   "start.title": "Argent pour la COVID-19",
-  "start_over": "Start over",
+  "start_over": "Recommencer",
   "student_debt.1": false,
   "student_debt.2": false,
   "student_loan.box1": false,
@@ -132,5 +132,6 @@
   "start.lastupdated": "Dernière mise à jour le 7 avril 2020",
   "start.intro.3": "Ce service ne fait que suggérer des programmes fédéraux pour l’instant. De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil afin de voir quelles nouvelles prestations s’appliquent à vous.",
   "start.details.summary": "Êtes vous un Canadien actuellement à l’étranger?",
-  "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander un prêt d’urgence."
+  "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander un prêt d’urgence.",
+  "lost_job.title": "Perte de revenu en lien avec la COVID-19"
 }
