--- a/locales/fr.json
+++ b/locales/fr.json
@@ -29,7 +29,7 @@
   "cerb.box3": "À recevoir au plus tard 10 jours après la demande",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "cerb.linktext": "Demander la PCU",
-  "cerb.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li> <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
+  "cerb.preamble": "<p>la Prestation canadienne d’urgence (PCU) peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li> <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
   "days_stopped_working.1": false,
   "days_stopped_working.2": false,
   "ei_regular.box1": "55 % de votre revenu, versement aux 2 semaines",
@@ -43,7 +43,7 @@
   "ei_sickness_cerb.box1": "500 $ par semaine, versement aux 4 semaines",
   "ei_sickness_cerb.box2": "Pendant 4 mois maximum",
   "ei_sickness_cerb.linktext": "Demander les prestations de maladie de l'assurance-emploi et la PCU",
-  "ei_sickness_cerb.preamble": "<p>La PCU peut vous aider si :</p><ul><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li><li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Si vous êtes admissible aux prestations de maladie de l'assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois de votre arrêt de travail. Vous recevrez ensuite automatiquement les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
+  "ei_sickness_cerb.preamble": "<p>la Prestation canadienne d’urgence (PCU) peut vous aider si :</p><ul><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID-19.</li><li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Si vous êtes admissible aux prestations de maladie de l'assurance-emploi ainsi qu’à la Prestation canadienne d’urgence (PCU), vous recevrez la PCU pendant les 4 premiers mois de votre arrêt de travail. Vous recevrez ensuite automatiquement les prestations régulières d’assurance-emploi si vous êtes toujours sans emploi.</p>",
   "ei_sickness_cerb.header": "Présenter une demande pour la PCU, ainsi que les prestations de maladie de l'assurance-emploi ",
   "ei_workshare.box1": "Recevoir des prestations d’assurance-emploi",
   "ei_workshare.box2": "Pendant 76 semaines maximum",
