--- a/locales/fr.json
+++ b/locales/fr.json
@@ -76,11 +76,11 @@
   "gst.2": false,
   "gst.3": false,
   "gst.hint": false,
-  "gst_credit.box1": "Automatic payment in April if you already receive the GST credit",
-  "gst_credit.box2": "$400 for single people, $600 for couples",
-  "gst_credit.header": "More money through the GST credit",
-  "gst_credit.linktext": "Learn more about the GST credit",
-  "gst_credit.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the GST credit.</li><li><a href=\"\">Dates of payments are available</a> online.</li></ul>",
+  "gst_credit.box1": "Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS/TVH",
+  "gst_credit.box2": "400 $ pour les célibataires 600 $ pour les couples",
+  "gst_credit.header": "Argent supplémentaire grâce au crédit pour la TPS/TVH",
+  "gst_credit.linktext": "En savoir plus à propos du crédit pour la TPS/TVH",
+  "gst_credit.preamble": "<p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Vérifiez votre compte bancaire pour savoir si vous recevez déjà le crédit pour la TPS/TVH.</li><li><a href=\"\">Les dates de versement</a> sont indiquées en ligne.</li></ul>",
   "lost_job.1": false,
   "lost_job.2": false,
   "lost_job.3": false,
