--- a/locales/fr.json
+++ b/locales/fr.json
@@ -19,11 +19,11 @@
   "ccb.2": false,
   "ccb.3": false,
   "ccb.hint": false,
-  "ccb_payment.box1": false,
-  "ccb_payment.box2": false,
-  "ccb_payment.header": false,
-  "ccb_payment.linktext": false,
-  "ccb_payment.preamble": false,
+  "ccb_payment.box1": "Versement automatique au mois de mai ",
+  "ccb_payment.box2": "300 $ par enfant ",
+  "ccb_payment.header": "Paiements additionnels de l’Allocation canadienne pour enfants ",
+  "ccb_payment.linktext": "En savoir plus à propos de l’Allocation canadienne pour enfant ",
+  "ccb_payment.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-disc list-outside'><li>vous avez la charge d’un enfant de moins de 18 ans. </li></ul><p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li><li><a href=\"\">Consultez les dates de versement des prestations</a>.</li></ul>",
   "cerb.box1": false,
   "cerb.box2": false,
   "cerb.box3": false,
