--- a/locales/fr.json
+++ b/locales/fr.json
@@ -84,10 +84,10 @@
   "lost_job.1": false,
   "lost_job.2": false,
   "lost_job.3": false,
-  "mortgage_deferral.box1": false,
-  "mortgage_deferral.header": false,
-  "mortgage_deferral.linktext": false,
-  "mortgage_deferral.preamble": false,
+  "mortgage_deferral.box1": "Interrompez vos paiements hypothécaires jusqu’à  ce que vous puissiez les payer à nouveau",
+  "mortgage_deferral.header": "Contacter votre banque afin de repousser vos paiements d’hypothèque",
+  "mortgage_deferral.linktext": "Vérifier auprès de votre banque pour en savoir plus",
+  "mortgage_deferral.preamble": "<p>Bon à savoir :</p><ul class='list-disc list-outside'><li>La banque chargera quand même de l’intérêt.</li><li> Lorsque vous pourrez effectuer vos paiements à nouveau, vous devrez payer l’intérêt encouru depuis le sursis en plus de vos paiements réguliers.</li><li> Vous pouvez aussi parler à votre banque à propos de plans de paiements spéciaux afin de ré-amortir votre hypothèque. </li></ul>",
   "mortgage_payments.1": false,
   "mortgage_payments.2": false,
   "mortgage_payments.3": false,
