--- a/locales/fr.json
+++ b/locales/fr.json
@@ -95,7 +95,7 @@
   "rent_help.header": false,
   "rent_help.linktext": false,
   "rent_help.preamble": false,
-  "required": "obligatoire",
+  "required": "(obligatoire)",
   "results.header_text": false,
   "results.title": false,
   "rrif.1": "rrif.1",
@@ -132,6 +132,6 @@
   "start.lastupdated": "Dernière mise à jour le 7 avril 2020",
   "start.intro.3": "Ce service ne fait que suggérer des programmes fédéraux pour l’instant. De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil afin de voir quelles nouvelles prestations s’appliquent à vous.",
   "start.details.summary": "Êtes vous un Canadien actuellement à l’étranger?",
-  "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander un prêt d’urgence.",
+  "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere'>un prêt d’urgence.</a>",
   "lost_job.title": "Perte de revenu en lien avec la COVID-19"
 }
