--- a/locales/fr.json
+++ b/locales/fr.json
@@ -92,9 +92,9 @@
   "mortgage_payments.2": false,
   "mortgage_payments.3": false,
   "phase.desc": "This site will change as we test ideas.",
-  "rent_help.header": false,
-  "rent_help.linktext": false,
-  "rent_help.preamble": false,
+  "rent_help.header": "Dans la majorité des provinces, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer",
+  "rent_help.linktext": "Vérifier auprès de mon gouvernement provincial pour en savoir plus",
+  "rent_help.preamble": "<ul class='list-disc list-outside'><li>Les gouvernements provinciaux sont responsables de la réglementation des logements locatifs.</li><li> À l’heure actuelle, on ne peut pas vous expulser si vous n’avez pas payé votre loyer</li></ul>",
   "required": "required",
   "results.header_text": false,
   "results.title": false,
