--- a/locales/fr.json
+++ b/locales/fr.json
@@ -100,9 +100,9 @@
   "results.title": false,
   "rrif.1": "rrif.1",
   "rrif.2": "rrif.2",
-  "rrif.header": false,
-  "rrif.linktext": false,
-  "rrif.preamble": false,
+  "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite",
+  "rrif.linktext": "Contactez votre banque pour plus de détails",
+  "rrif.preamble": "<ul class='list-disc list-outside'><li>Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire en 2020 sera 25% plus bas afin que vous puissiez économiser. </li></ul>",
   "start.intro.1": "Answer some questions to find out about financial help.",
   "start.intro.2": "This tool does not collect or track your information. See our Privacy policy and Terms and conditions for more information. It only suggests federal programs at this time.",
   "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
