--- a/locales/en.json
+++ b/locales/en.json
@@ -105,7 +105,7 @@
   "rrif.linktext": "Contact your bank for more details",
   "rrif.preamble": "<ul class='list-disc list-outside'><li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money. </li></ul>",
   "start.intro.1": "Answer some questions to find out about financial help.",
-  "start.intro.2": "Your answers do not impact your eligibility. See our <a href='https://digital.canada.ca/legal/privacy/'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/'>Terms and conditions</a> for more information. ",
+  "start.intro.2": "Your answers do not impact your eligibility. See our <a href='https://digital.canada.ca/legal/privacy/' target='_blank'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/' target='_blank'>Terms and conditions</a> for more information. ",
   "start.submit": "Start now",
   "start.subtitle": "Find out what financial help is available",
   "start.title": "Money for COVID‑19",
@@ -133,6 +133,6 @@
   "start.lastupdated": "Last updated April 7, 2020",
   "start.intro.3": "This tool only suggests federal programs at this time. New benefits are still being created, and we are working to include them as soon as possible. You may want to check back again.",
   "start.details.summary": "Are you a Canadian stuck abroad?",
-  "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help'>an emergency loan.</a>",
+  "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan.</a>",
   "lost_job.title": "Lost income due to COVID-19"
 }
