--- a/locales/en.json
+++ b/locales/en.json
@@ -133,6 +133,6 @@
   "start.lastupdated": "Last updated April 7, 2020",
   "start.intro.3": "This tool only suggests federal programs at this time. New benefits are still being created, and we are working to include them as soon as possible. You may want to check back again.",
   "start.details.summary": "Are you a Canadian stuck abroad?",
-  "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan.</a>",
+  "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan</a>.",
   "lost_job.title": "Lost income due to COVID-19"
 }
