--- a/locales/fr.json
+++ b/locales/fr.json
@@ -116,7 +116,7 @@
   "student_loan.box1": "Les paiements sont automatiquement supsendus",
   "student_loan.box2": "Du 30 mars 2020 jusqu’au 30 septembre 2020",
   "student_loan.header": "Arrêt des paiements de votre dette d’étude pendant 6 mois",
-  "student_loan.linktext": "Learn more about help with student loan payments",
+  "student_loan.linktext": "En savoir plus à propos de l’aide disponible pour votre dette d’étude",
   "student_loan.preamble": "<p>Bon à savoir:</p><ul class='list-disc list-outside'><li>Vous n’avez pas à faire de demande afin de suspendre vos paiements.</li><li> Les paiements pré-autorisés sont suspendus.</li><li> Consultez vous à votre compte au <a href=\"\">Centre de service national de prêts aux étudiants</a> pour plus de détails.</li></ul>",
   "wordmark.alt": "Symbol of the Government of Canada",
   "your_situation.no_income.1": false,
