Add missing titles
Kept them outside of the div so that they will be full-width,
which seems to be the Canada.ca expectation.

--- a/locales/en.json
+++ b/locales/en.json
@@ -67,6 +67,7 @@
   "form.your_situation.unchanged_income": "Choose the description that best fits your situation",
   "gross_income.1": "Under $4,999.",
   "gross_income.2": "$5,000 or more.",
+  "gross_income.title": "Income earned",
   "gst.1": "Yes",
   "gst.2": "No",
   "gst.3": "You're not sure",
@@ -99,6 +100,7 @@
   "rrif.header": "Lower mandatory withdrawals for your Registered Retirement Income Fund (RRIF)",
   "rrif.linktext": "Contact your bank for more details",
   "rrif.preamble": "<ul class='list-disc list-outside'><li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money. </li></ul>",
+  "rrif.title": "RRIF",
   "start.intro.1": "Answer some questions to find out about financial help.",
   "start.intro.2": "Your answers do not impact your eligibility. See our <a href='https://digital.canada.ca/legal/privacy/' target='_blank'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/' target='_blank'>Terms and conditions</a> for more information. ",
   "start.submit": "Start now",
